<resources>
    <string name="app_name">ReCodEx</string>
    <string name="title_activity_main">ReCodEx</string>
    <string name="title_activity_navigation_drawer">ReCodEx</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_default_api_url">https://recodex.mff.cuni.cz/api</string>
    <string name="pref_title_api_uri">API base URI</string>
    <string name="pref_title_api_version">API version</string>
    <string-array name="pref_api_version_titles">
        <item>Version 1</item>
    </string-array>
    <string-array name="pref_api_version_values">
        <item>v1</item>
    </string-array>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_token_name">bearerToken</string>
    <string name="pref_default_api_version">v1</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dashboard">Dashboard</string>
    <string name="action_manage_accounts">Manage accounts</string>
    <string name="title_activity_about">About</string>
    <string name="recodex_logo">ReCodEx logo</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="description">ReCodEx is a whole environment for dynamic evaluation of programming exercises. This application provides alternative frontend for viewing assignments and overall student score. It is not possible to submit new solutions, for complete funcionality use the main web interface. The application is developed as an open-source project under the terms of MIT licence, so all contributions are welcome.</string>
    <string name="hall_of_fame">Hall of Fame:</string>
    <string name="pick_account">Pick Account</string>
    <string name="user_preferences_prefix">user_</string>
    <string name="recodex_log_tag">recodex</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="john_doe">John Doe</string>
    <string name="action_pick_account">Pick Account</string>
    <string name="regular_login_tab_label">Regular</string>
    <string name="cas_login_tab_label">CAS</string>
    <string name="ukco">UKCO</string>
    <string name="loading_group_list_failed">Loading group list data failed.</string>
    <string name="loading_group_detail_failed">Loading group data failed.</string>
    <string name="action_sync_now">Sync Now</string>
    <string name="loading_assignment_failed">Loading assignment failed</string>
    <string name="assignment_submissions_loading_failed">Loading assignment submissions failed</string>
    <string name="new_assignment">New assignment in</string>
    <string name="submission_loading_failed">Submision loading failed</string>
    <string name="display_detailed_test_results">Display detailed test results</string>
    <string name="local_account_notification">Sign in with your local ReCodEx credentials. To create local account, please visit ReCodEx web application.</string>
    <string name="recodex">ReCodEx</string>
    <string name="android_app">android-app</string>
    <string name="hall_of_fame_names">Jan Buchar Martin Polanka Petr Stefan</string>
    <string name="submitted_at">Submitted at</string>
    <string name="submitted_by">Submitted by</string>
    <string name="evaluation_status">Evaluation status</string>
    <string name="evaluation_not_ready">Evaluation is not ready yet</string>
    <string name="evaluated_at">Evaluated at</string>
    <string name="build_succeeded">Build succeeded</string>
    <string name="score">Score</string>
    <string name="points">Points</string>
    <string name="bonus_points">Bonus points</string>
    <string name="test">Test</string>
    <string name="android_studio">Android Studio</string>
</resources>
