<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_api_url"
        android:inputType="textUri"
        android:key="api_uri"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_api_uri" />

    <ListPreference
        android:defaultValue="@string/pref_default_api_version"
        android:entries="@array/pref_api_version_titles"
        android:entryValues="@array/pref_api_version_values"
        android:key="api_version"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_api_version" />

    <ListPreference
        android:defaultValue="60"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

</PreferenceScreen>
