<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_groups">
        <item
            android:id="@+id/action_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
    </group>

    <group android:id="@+id/menu_settings">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/action_about" />
    </group>

</menu>
